clusters/production/nestledger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestledger-service
  labels:
    app: nestledger
spec:
  type: ClusterIP
  selector:
    app: nestledger
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
